# zlib-build-fails-example

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  defs.bzl
ext_defs/: external.bzl  non_mod_deps.bzl
