bazel_dep(
    name = "mingw_toolchain"
)

git_override(
    module_name = "mingw_toolchain",
    remote = "https://github.com/vvviktor/bazel-mingw-toolchain.git",
    commit = "0ea42a31c45f0ff146058cecd124053b6915205e",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name="platforms", version="0.0.8")

non_mod_zlib = use_extension("//ext_defs:non_mod_deps.bzl", "non_mod_zlib")
use_repo(non_mod_zlib, "zlib")