###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(
    name = "mingw_toolchain"
)

git_override(
    module_name = "mingw_toolchain",
    remote = "https://github.com/vvviktor/bazel-mingw-toolchain.git",
    commit = "0ea42a31c45f0ff146058cecd124053b6915205e",
)

bazel_dep(name = "zlib", version = "1.3.1")